More docs and a couple of tweaks before 1.0.